k8s/apps-manifests/kiali/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kiali-operator/kiali-ingress-cert # This should match the Certificate secretName
    hosts:
    - kiali.aks.diehlabs.com # This should match a DNS name in the Certificate
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-https
  namespace: istio-system
spec:
  hosts:
  - kiali.aks.diehlabs.com
  gateways:
  - kiali-ingress-gateway
  http:
  - route:
    - destination:
        port:
          number: 20001
        host: istio-system/kiali
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE
