k8s/apps-manifests/kiali/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-https
  namespace: argocd
spec:
  hosts:
  - kiali.aks.diehlabs.com
  gateways:
  - argocd/argocd-ingress-gateway
  http:
  - match:
    - uri: 
        prefix: /
    route:
    - destination:
        port:
          number: 20001
        host: kiali
